--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -41,7 +41,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.55">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/load_layout"
@@ -104,6 +105,16 @@
                     android:textColor="@color/result_color"
                     android:textSize="@dimen/result_text_size"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@id/line"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <View
+                    android:id="@+id/line"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/line_height"
+                    android:layout_marginBottom="@dimen/line_bottom_margin"
+                    android:background="@color/line_color"
                     app:layout_constraintBottom_toTopOf="@id/best_score_label"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -124,11 +135,20 @@
                     android:id="@+id/best_score"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/best_score_margin_bottom"
                     android:gravity="center_horizontal"
                     android:textColor="@color/result_color"
                     android:textSize="@dimen/best_score_size"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@id/line2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <View
+                    android:id="@+id/line2"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/result_line_height"
+                    android:layout_marginBottom="@dimen/best_score_margin_bottom"
+                    android:background="@color/line_color"
                     app:layout_constraintBottom_toTopOf="@id/result_text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
