--- a/app/src/main/res/values-h510dp/dimens.xml
+++ b/app/src/main/res/values-h510dp/dimens.xml
@@ -1,47 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_margin">20dp</dimen>
-
-    <dimen name="card_elevation">10dp</dimen>
-    <dimen name="card_corner_radius">20dp</dimen>
     <dimen name="inner_layout_margin">14dp</dimen>
 
     <dimen name="brand_margin_bottom">12dp</dimen>
     <dimen name="brand_text_size">20sp</dimen>
-    <dimen name="brand_image_padding_horizontal">20dp</dimen>
 
     <dimen name="hint_text_size">17sp</dimen>
-    <dimen name="hint_bottom_margin">8dp</dimen>
 
-    <dimen name="button_stroke_width">1dp</dimen>
-    <dimen name="button_corner_radius">10dp</dimen>
+    <dimen name="setting_chip_text_size">13sp</dimen>
+
     <dimen name="button_text_size">14sp</dimen>
-    <dimen name="button_elevation">1dp</dimen>
     <dimen name="button_pudding">7dp</dimen>
-
-    <dimen name="load_text_pudding">10dp</dimen>
 
     <dimen name="points_text_size">12sp</dimen>
 
     <dimen name="tv_question_height">190dp</dimen>
     <dimen name="tv_question_margin_top">13dp</dimen>
-    <dimen name="tv_question_margin_bottom">18dp</dimen>
-    <dimen name="tv_question_pudding">20dp</dimen>
+    <dimen name="tv_question_margin_bottom">17dp</dimen>
 
     <dimen name="question_image_top_margin">13dp</dimen>
-    <dimen name="question_image_bottom_margin">18dp</dimen>
+    <dimen name="question_image_bottom_margin">17dp</dimen>
+
+    <dimen name="video_question_width">217dp</dimen>
+    <dimen name="video_question_height">122dp</dimen>
+    <dimen name="video_question_margin_top">44dp</dimen>
+    <dimen name="video_question_margin_bottom">54dp</dimen>
+
+    <dimen name="audio_question_size">70dp</dimen>
+    <dimen name="audio_question_margin_top">65dp</dimen>
+    <dimen name="audio_question_margin_bottom">85dp</dimen>
 
     <dimen name="result_text_size">19sp</dimen>
-    <dimen name="result_bottom_margin">5dp</dimen>
-    <dimen name="result_text_bottom_margin">5dp</dimen>
 
     <dimen name="best_score_text_size">13sp</dimen>
-    <dimen name="last_score_margin_bottom">15dp</dimen>
-    <dimen name="best_score_margin_bottom">10dp</dimen>
     <dimen name="best_score_size">16sp</dimen>
 
     <dimen name="congratulation_text_size">19sp</dimen>
-    <dimen name="congratulation_image_padding_horizontal">10dp</dimen>
-
 
 </resources>
