--- a/app/src/main/res/values-h840dp/dimens.xml
+++ b/app/src/main/res/values-h840dp/dimens.xml
@@ -1,47 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_margin">20dp</dimen>
-
-    <dimen name="card_elevation">10dp</dimen>
-    <dimen name="card_corner_radius">20dp</dimen>
     <dimen name="inner_layout_margin">20dp</dimen>
 
     <dimen name="brand_margin_bottom">20dp</dimen>
     <dimen name="brand_text_size">28sp</dimen>
-    <dimen name="brand_image_padding_horizontal">20dp</dimen>
+
+    <dimen name="setting_chip_text_size">17sp</dimen>
 
     <dimen name="hint_text_size">23sp</dimen>
-    <dimen name="hint_bottom_margin">10dp</dimen>
 
-    <dimen name="button_stroke_width">1dp</dimen>
-    <dimen name="button_corner_radius">10dp</dimen>
     <dimen name="button_text_size">18sp</dimen>
-    <dimen name="button_elevation">1dp</dimen>
     <dimen name="button_pudding">11dp</dimen>
-
-    <dimen name="load_text_pudding">10dp</dimen>
 
     <dimen name="points_text_size">15sp</dimen>
 
     <dimen name="tv_question_height">290dp</dimen>
     <dimen name="tv_question_margin_top">15dp</dimen>
     <dimen name="tv_question_margin_bottom">25dp</dimen>
-    <dimen name="tv_question_pudding">20dp</dimen>
 
     <dimen name="question_image_top_margin">15dp</dimen>
     <dimen name="question_image_bottom_margin">25dp</dimen>
 
+    <dimen name="video_question_width">331dp</dimen>
+    <dimen name="video_question_height">186dp</dimen>
+    <dimen name="video_question_margin_top">66dp</dimen>
+    <dimen name="video_question_margin_bottom">78dp</dimen>
+
+    <dimen name="audio_question_size">120dp</dimen>
+    <dimen name="audio_question_margin_top">94dp</dimen>
+    <dimen name="audio_question_margin_bottom">116dp</dimen>
+
     <dimen name="result_text_size">24sp</dimen>
-    <dimen name="result_bottom_margin">5dp</dimen>
-    <dimen name="result_text_bottom_margin">5dp</dimen>
 
     <dimen name="best_score_text_size">19sp</dimen>
-    <dimen name="last_score_margin_bottom">15dp</dimen>
-    <dimen name="best_score_margin_bottom">10dp</dimen>
     <dimen name="best_score_size">21sp</dimen>
 
     <dimen name="congratulation_text_size">24sp</dimen>
-    <dimen name="congratulation_image_padding_horizontal">10dp</dimen>
-
 
 </resources>
