A new branch with a local database, but up-to-date code and data (instead of firebase).
For now, the version from this branch will be used.

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -59,7 +59,7 @@
                     android:paddingHorizontal="@dimen/load_text_pudding"
                     android:textColor="@color/hint_text_color"
                     android:textSize="@dimen/hint_text_size"
-                    tools:text="@string/tv_loading_quiz_text" />
+                    android:text="@string/tv_loading_quiz_text" />
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
                     android:id="@+id/load_progress"
