Fixed the adaptation of layouts for different screens. Fixed names in resources.
Added the ability to reset completed questions.

Added the display of full-screen ads after each 3 passed the test.

Due to the addition of new issues, migration has been added and the database file has been updated.

--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -54,7 +54,7 @@
                     android:layout_marginBottom="@dimen/hint_bottom_margin"
                     android:gravity="top|center_horizontal"
                     android:text="@string/tv_choose_category"
-                    android:textColor="@color/hint_text_color"
+                    android:textColor="@color/text_color"
                     android:textSize="@dimen/hint_text_size"
                     app:layout_constraintBottom_toTopOf="@id/line"
                     app:layout_constraintEnd_toEndOf="parent"
