--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -55,7 +55,7 @@
                     android:gravity="center"
                     android:paddingHorizontal="@dimen/load_text_pudding"
                     android:text="@string/tv_loading_result_text"
-                    android:textColor="@color/hint_text_color"
+                    android:textColor="@color/text_color"
                     android:textSize="@dimen/hint_text_size"
                     app:layout_constraintBottom_toTopOf="@id/load_progress"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -88,8 +88,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="@string/tv_text_your_result"
-                    android:textColor="@color/hint_text_color"
-                    android:textSize="@dimen/hint_text_size"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/score_label_text_size"
                     app:layout_constraintBottom_toTopOf="@id/score"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -101,7 +101,7 @@
                     android:layout_marginBottom="@dimen/result_bottom_margin"
                     android:gravity="center_horizontal"
                     android:textColor="@color/result_color"
-                    android:textSize="@dimen/result_text_size"
+                    android:textSize="@dimen/score_text_size"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@id/best_score_label"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -113,8 +113,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="@string/tv_text_best_result"
-                    android:textColor="@color/hint_text_color"
-                    android:textSize="@dimen/best_score_text_size"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/best_score_label_size"
                     app:layout_constraintBottom_toTopOf="@id/best_score"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
