--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -54,8 +54,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="@string/random_questions"
-                    android:textColor="@color/hint_text_color"
-                    android:textSize="@dimen/hint_text_size" />
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/result_label_text_size" />
 
                 <TextView
                     android:id="@+id/no_category_score"
@@ -80,8 +80,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="@string/text_questions"
-                    android:textColor="@color/hint_text_color"
-                    android:textSize="@dimen/hint_text_size" />
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/result_label_text_size" />
 
                 <TextView
                     android:id="@+id/text_questions_score"
@@ -100,15 +100,14 @@
                     android:layout_marginBottom="@dimen/line_bottom_margin"
                     android:background="@color/line_color" />
 
-
                 <TextView
                     android:id="@+id/image_questions_score_label"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="@string/image_questions"
-                    android:textColor="@color/hint_text_color"
-                    android:textSize="@dimen/hint_text_size" />
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/result_label_text_size" />
 
                 <TextView
                     android:id="@+id/image_questions_score"
@@ -133,8 +132,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="@string/audio_questions"
-                    android:textColor="@color/hint_text_color"
-                    android:textSize="@dimen/hint_text_size" />
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/result_label_text_size" />
 
                 <TextView
                     android:id="@+id/audio_questions_score"
@@ -158,8 +157,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="@string/video_questions"
-                    android:textColor="@color/hint_text_color"
-                    android:textSize="@dimen/hint_text_size" />
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/result_label_text_size" />
 
                 <TextView
                     android:id="@+id/video_questions_score"
