--- a/app/src/main/res/values-h800dp/dimens.xml
+++ b/app/src/main/res/values-h800dp/dimens.xml
@@ -2,19 +2,14 @@
 <resources>
     <dimen name="inner_layout_margin">20dp</dimen>
 
-    <dimen name="brand_margin_bottom">17dp</dimen>
-    <dimen name="brand_text_size">27sp</dimen>
+    <dimen name="brand_margin_bottom">18dp</dimen>
 
-    <dimen name="hint_text_size">22sp</dimen>
-
-    <dimen name="setting_chip_text_size">17sp</dimen>
-
-    <dimen name="button_text_size">18sp</dimen>
     <dimen name="button_pudding">11dp</dimen>
 
-    <dimen name="points_text_size">15sp</dimen>
+    <dimen name="content_loading_progress_size">70dp</dimen>
 
-    <dimen name="tv_question_height">270dp</dimen>
+    <dimen name="question_height">270dp</dimen>
+
     <dimen name="tv_question_margin_top">15dp</dimen>
     <dimen name="tv_question_margin_bottom">24dp</dimen>
 
@@ -27,14 +22,8 @@
     <dimen name="video_question_margin_bottom">74dp</dimen>
 
     <dimen name="audio_question_size">110dp</dimen>
-    <dimen name="audio_question_margin_top">90dp</dimen>
-    <dimen name="audio_question_margin_bottom">109dp</dimen>
+    <dimen name="audio_question_margin_top">88dp</dimen>
+    <dimen name="audio_question_margin_bottom">111dp</dimen>
 
-    <dimen name="result_text_size">23sp</dimen>
-
-    <dimen name="best_score_text_size">18sp</dimen>
-    <dimen name="best_score_size">20sp</dimen>
-
-    <dimen name="congratulation_text_size">23sp</dimen>
-
+    <dimen name="ad_margin_top">18dp</dimen>
 </resources>
