--- a/app/src/main/res/values-h840dp/dimens.xml
+++ b/app/src/main/res/values-h840dp/dimens.xml
@@ -3,18 +3,13 @@
     <dimen name="inner_layout_margin">20dp</dimen>
 
     <dimen name="brand_margin_bottom">20dp</dimen>
-    <dimen name="brand_text_size">28sp</dimen>
 
-    <dimen name="setting_chip_text_size">17sp</dimen>
-
-    <dimen name="hint_text_size">23sp</dimen>
-
-    <dimen name="button_text_size">18sp</dimen>
     <dimen name="button_pudding">11dp</dimen>
 
-    <dimen name="points_text_size">15sp</dimen>
+    <dimen name="content_loading_progress_size">80dp</dimen>
 
-    <dimen name="tv_question_height">290dp</dimen>
+    <dimen name="question_height">290dp</dimen>
+
     <dimen name="tv_question_margin_top">15dp</dimen>
     <dimen name="tv_question_margin_bottom">25dp</dimen>
 
@@ -30,11 +25,5 @@
     <dimen name="audio_question_margin_top">94dp</dimen>
     <dimen name="audio_question_margin_bottom">116dp</dimen>
 
-    <dimen name="result_text_size">24sp</dimen>
-
-    <dimen name="best_score_text_size">19sp</dimen>
-    <dimen name="best_score_size">21sp</dimen>
-
-    <dimen name="congratulation_text_size">24sp</dimen>
-
+    <dimen name="ad_margin_top">20dp</dimen>
 </resources>
