--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,9 +4,9 @@
 
     <dimen name="card_elevation">10dp</dimen>
     <dimen name="card_corner_radius">20dp</dimen>
-    <dimen name="inner_layout_margin">15dp</dimen>
+    <dimen name="inner_layout_margin">10dp</dimen>
 
-    <dimen name="brand_margin_bottom">13dp</dimen>
+    <dimen name="brand_margin_bottom">4dp</dimen>
     <dimen name="brand_text_size">22sp</dimen>
     <dimen name="brand_image_padding_horizontal">20dp</dimen>
 
@@ -17,44 +17,57 @@
 
     <dimen name="line_bottom_margin">8dp</dimen>
 
-    <dimen name="setting_chip_text_size">15sp</dimen>
-    <dimen name="settings_item_line_bottom_margin">12dp</dimen>
+    <dimen name="setting_chip_text_size">16sp</dimen>
+    <dimen name="settings_item_bottom_margin">12dp</dimen>
+    <dimen name="reset_passed_questions_hint_text_size">16sp</dimen>
+
+    <dimen name="dialog_padding">14dp</dimen>
+    <dimen name="dialog_title_text_size">18sp</dimen>
+    <dimen name="dialog_element_top_margin">12dp</dimen>
+    <dimen name="dialog_submit_btn_top_margin">10dp</dimen>
 
     <dimen name="button_stroke_width">1dp</dimen>
     <dimen name="button_corner_radius">10dp</dimen>
     <dimen name="button_text_size">16sp</dimen>
     <dimen name="button_elevation">1dp</dimen>
-    <dimen name="button_pudding">8dp</dimen>
+    <dimen name="button_pudding">5dp</dimen>
 
     <dimen name="load_text_pudding">10dp</dimen>
 
-    <dimen name="points_text_size">13sp</dimen>
+    <dimen name="points_text_size">14sp</dimen>
 
     <dimen name="content_loading_progress_size">40dp</dimen>
 
-    <dimen name="tv_question_height">210dp</dimen>
-    <dimen name="tv_question_margin_top">15dp</dimen>
-    <dimen name="tv_question_margin_bottom">20dp</dimen>
+    <dimen name="question_height">150dp</dimen>
+
+    <dimen name="text_question_text_size">19sp</dimen>
     <dimen name="tv_question_pudding">20dp</dimen>
+    <dimen name="tv_question_margin_top">3dp</dimen>
+    <dimen name="tv_question_margin_bottom">7dp</dimen>
 
-    <dimen name="question_image_top_margin">15dp</dimen>
-    <dimen name="question_image_bottom_margin">20dp</dimen>
+    <dimen name="question_image_top_margin">3dp</dimen>
+    <dimen name="question_image_bottom_margin">7dp</dimen>
 
-    <dimen name="video_question_width">240dp</dimen>
-    <dimen name="video_question_height">135dp</dimen>
-    <dimen name="video_question_margin_top">50dp</dimen>
-    <dimen name="video_question_margin_bottom">60dp</dimen>
+    <dimen name="video_question_width">200dp</dimen>
+    <dimen name="video_question_height">110dp</dimen>
     <dimen name="video_question_margin_horizontal">20dp</dimen>
+    <dimen name="video_question_margin_top">20dp</dimen>
+    <dimen name="video_question_margin_bottom">30dp</dimen>
 
-    <dimen name="audio_question_size">85dp</dimen>
-    <dimen name="audio_question_margin_top">72dp</dimen>
-    <dimen name="audio_question_margin_bottom">88dp</dimen>
+    <dimen name="audio_question_size">80dp</dimen>
+    <dimen name="audio_question_margin_top">32dp</dimen>
+    <dimen name="audio_question_margin_bottom">48dp</dimen>
 
+    <dimen name="ad_margin_top">4dp</dimen>
+
+    <dimen name="result_label_text_size">19sp</dimen>
     <dimen name="result_text_size">21sp</dimen>
     <dimen name="result_bottom_margin">5dp</dimen>
     <dimen name="result_text_bottom_margin">5dp</dimen>
 
-    <dimen name="best_score_text_size">15sp</dimen>
+    <dimen name="score_label_text_size">19sp</dimen>
+    <dimen name="score_text_size">21sp</dimen>
+    <dimen name="best_score_label_size">16sp</dimen>
     <dimen name="last_score_margin_bottom">15dp</dimen>
     <dimen name="best_score_margin_bottom">10dp</dimen>
     <dimen name="best_score_size">18sp</dimen>
