--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -162,12 +162,12 @@
                     android:contentDescription="@string/result_image_content_description"
                     android:paddingHorizontal="@dimen/congratulation_image_padding_horizontal"
                     android:scaleType="fitXY"
-                    app:layout_constraintBottom_toTopOf="@id/to_categories"
+                    app:layout_constraintBottom_toTopOf="@id/share_result_btn"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/to_categories"
+                    android:id="@+id/share_result_btn"
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -176,7 +176,28 @@
                     android:insetTop="0dp"
                     android:padding="@dimen/button_pudding"
                     android:stateListAnimator="@null"
+                    android:text="@string/share_result"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/button_text_size"
+                    app:cornerRadius="@dimen/button_corner_radius"
+                    app:layout_constraintBottom_toTopOf="@id/to_categories"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:rippleColor="@color/btn_ripple_color"
+                    app:strokeColor="@color/btn_stroke_color"
+                    app:strokeWidth="@dimen/button_stroke_width" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/to_categories"
+                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/white"
+                    android:elevation="@dimen/button_elevation"
+                    android:padding="@dimen/button_pudding"
                     android:text="@string/to_categories_text"
+                    android:stateListAnimator="@null"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="@dimen/button_text_size"
